syntax = "proto3";
import "proto_error.proto";
package proto;
option go_package = "github.com/caticat/go_game_server/example/proto";


message HelloReq
{
	string msg = 1;
}
message HelloAck
{
	ErrorCode error = 1;
	string msg = 2;
}
